# jobpulse

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
jobpulse/: __init__.py  config.py  gui.py  http_client.py  locations.py  models.py  orm.py  scraper.py
