[project]
name = "jobpulse"
dynamic = ["version"]
authors = [
    {name = "Md. Almas Ali", email = "almas@almasali.net"},
]
maintainers = [
    {name = "Md. Almas Ali", email = "almas@almasali.net"},
]
license = {text = "MIT"}
description = "Production-ready job search application for BDJobs with GUI and database support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "tenacity>=9.0.0",
    "sqlalchemy>=2.0.0",
    "customtkinter>=5.2.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 120
select = ["I"]



[tool.setuptools.packages.find]
include = ["jobpulse*"]
exclude = ["temp*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "jobpulse/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["jobpulse"]
